--- a/requirements.txt
+++ b/requirements.txt
@@ -30,12 +30,14 @@ oauthlib==3.2.2
 opencv-python==4.7.0.68
 opt-einsum==3.3.0
 packaging==22.0
+pandas==1.5.3
 Pillow==9.4.0
 protobuf==3.19.6
 pyasn1==0.4.8
 pyasn1-modules==0.2.8
 pyparsing==3.0.9
 python-dateutil==2.8.2
+pytz==2022.7.1
 requests==2.28.1
 requests-oauthlib==1.3.1
 rsa==4.9
@@ -47,6 +49,7 @@ tensorflow==2.11.0
 tensorflow-estimator==2.11.0
 tensorflow-io-gcs-filesystem==0.29.0
 termcolor==2.2.0
+tqdm==4.64.1
 typing_extensions==4.4.0
 urllib3==1.26.13
 Werkzeug==2.2.2
